--- a/posts.org
+++ b/posts.org
@@ -8,22 +8,23 @@
 ** Introduction
   After floundering about unsuccessfully with Hugo in the past, this
   time things finally clicked. One thing that helped me greatly here
-  was becoming acquainted with Go; and so, for example, things like
-  Hugo templates are now a familiar idiom.
+  was becoming acquainted with Go; and so, for example, things that
+  looked strange before, like Hugo templates, are now a familiar
+  idiom.
+
+  It's remarkable the degree to which software engineering skills are
+  built upon a foundation of familiarity with lore.[fn:1] After
+  becoming familiar with backend web development, the idea of
+  "starting a local server" (for example, to preview one's website)
+  was no longer as weird as it was before.
 
   I was overjoyed to find out that Hugo supports Emacs Org Mode
-  natively! However, I quickly found out[fn:1] that the recommended
+  natively! However, I quickly found out[fn:2] that the recommended
   approach is to use Ox Hugo, something else with which I had toyed
   with but ultimately failed to understand - and, as in the case of
   Hugo itself, finally grokked.
 
-  It's remarkable the degree to which software engineering skills are
-  built upon a foundation of familiarity with lore.[fn:2] After
-  becoming familiar with backend web development, the idea of
-  "starting a local server", for example, to preview one's Hugo-built
-  site was no longer as weird as it was before. 
-
-** Part One: Some Backstory
+** Some Backstory
    I needed a website - the one you're reading now - because, at the
    time of this writing, I'm looking for a full-time software
    developer position.  Now, without falling into some sort of
@@ -59,9 +60,7 @@
 
    One such language was Lua. I have a soft spot for Lua. Lua 5.3 was
    the first programming language I learned /well enough/ to write
-   serious, lengthy programs in (I had used it to complete the /Nand
-   to Tetris/ course on Coursera.) The book /Programming in Lua/ (the
-   edition based on Lua 5.0 is available online![fn:3]) is
+   serious, lengthy programs in[fn:3]. The book /Programming in Lua/[fn:4] is
    fantastically well-written, arguably on par with K&R in this
    respect. The chapter on Lua patterns primed my brain to finally
    truly understand regular expressions later on.
@@ -69,41 +68,78 @@
    Programming can be hard at first, but practice and determination
    really do make perfect.
 
-** The end
+** Enter Hugo
+
+   As I stated earlier, I was now able to hit the ground running with
+   Hugo, while writing my blog posts in a format I enjoy:
+   Org. Markdown, while it gets the job done, feels in comparison a
+   bit unwieldy and lacking[fn:5]. Nevertheless, it would seem that Markdown
+   is itself a kind of accepted /lingua franca/ for developers
+   nowadays, and so I resort to it when the occasion calls.
+
+   There's an excellent blog post[fn:6] that details getting set up
+   with Hugo. The author frames his explanation in the context of
+   Windows and PowerShell, but I nevertheless found the essential
+   instructions quite clear. Let's of course not forget the
+   documentation at [[https://gohugo.io][gohugo.io]].
+
+   For people interested in Emacs and Ox Hugo, there's also
+   [[https://ox-hugo.scripter.co/][ox-hugo.scripter.co]].
+
+   I'll now detail a quick summary of the steps I took.
+
+*** Install Hugo
+
+    Specifically, the Extended Edition (though I went full maximalist
+    and installed the Deployable Edition.)
+    
+*** Create a New Hugo Site
+
+    The site you create in this step will be your actual blog. Hugo,
+    at heart, is a Golang command-line app, and so drives like one:
+
+    ~hugo new site $SITENAME~
+
+*** Initialize a Git Repo at the Root of Your Site
+
+    In this step, you'll also add a nice ~.gitignore~ file:
+
+    #+begin_example
+    .DS_Store
+    .hugo_build.lock
+    /public/
+    /resources/_gen/
+    #+end_example
+
+    
+*** Initialize a new Hugo Module at the Root of Your Site
+
+    Just as how you would do with working with Go, you'd run more or
+    less the following:
+
+    ~hugo mod init github.com/$GITHUB_USERNAME/myhugosite~
+
+    This assumes you'll be hosting your site using GitHub pages.
    
-* Minor Modes are an Excellent Hack                               :emacs:org:
-  :properties:
-  :export_file_name: minor-modes-are-an-excellent-hack
-  :export_date: 2025-09-18
-  :export_hugo_custom_front_matter: :summary "Minor modes are underrated as an Emacs skill."
-  :end:
-
-  Some text.
-
-* A Third Post
-  :properties:
-  :export_file_name: a-third-post
-  :export_date: 2025-09-18
-  :export_hugo_custom_front_matter: :summary "A third post."
-  :end:
-
-  Some text.
-
-* COMMENT References
-
-1. https://gohugo.io
-2. https://ox-hugo.scripter.co/
-
-
-
-
 * Footnotes
-[fn:4] https://mitp-content-server.mit.edu/books/content/sectbyfn/books_pres_0/6515/sicp.zip/index.html 
-[fn:3] https://www.lua.org/pil/contents.html
-[fn:2] Arguably, this is why a lot of people famously find coding
+
+[fn:5] However, Markdown Mode for Emacs is nevertheless excellent, and
+can make editing Markdown almost feel like you're editing Org!
+
+[fn:3] I had actually used it to complete the /Nand to Tetris/ course
+on Coursera. Perhaps not as popular a choice as, say, Java or Python,
+but hey - I was more interested in Lua at the time.
+
+[fn:6] https://mikefrobbins.com/2023/10/26/building-and-deploying-a-blog-with-hugo-and-github-pages/
+
+[fn:7] https://mitp-content-server.mit.edu/books/content/sectbyfn/books_pres_0/6515/sicp.zip/index.html 
+
+[fn:4] Lua 5.0 edition available here: https://www.lua.org/pil/contents.html
+
+[fn:1] Arguably, this is why a lot of people famously find coding
 difficult at first: there's a lot of /implied/ know-how one really
 needs to come to the table with in order to be successful at the
 endeavor. Proficiency in matters of software can often be a sub-linear
 bootstrapping process.
 
-[fn:1] https://weblog.masukomi.org/2024/07/19/using-org-mode-with-hugo/ 
+[fn:2] https://weblog.masukomi.org/2024/07/19/using-org-mode-with-hugo/ 
