chore: fix website slug + light edit

--- a/posts.org
+++ b/posts.org
@@ -22,8 +22,7 @@
    No. 5 in D.)
 
    Mathematics is also a passing interest of mine, though I haven't
-   had time to pursue it in any great depth. I hope that situation
-   changes in the future, though.
+   had time as of yet to pursue it in any great depth.
 
 
 * Projects
